# epiCBattle

./: .gitignore  CMakeLists.txt  Credits.txt  README.md  build_ninja.bat  build_vs.bat
models/asgore/: license.txt  scene.gltf
models/metrocop/: license.txt  scene.gltf
src/: game_states.h  main.cpp
src/core/: types.h
src/game/: maps.h
